# gadschain

./: .env.example  .gitignore  Dockerfile  LICENSE  README.md  docker-compose.yml  pyproject.toml  server.json
demo/: demo.tape
scripts/: generate_demo.py
src/gadschain/: server.py
src/gadschain/clients/: __init__.py  base.py  google_ads.py
src/gadschain/core/: transformer.py
src/gadschain/models/: __init__.py  campaign.py
tests/: test_implementation.py  test_integration.py  test_scaffold.py
